partman-crypto (24) UNRELEASED; urgency=low

  * Use veto_filesystems to allow only ext2 on crypto
    devices with random keys. Closes: #414638. This is only 
    effective with partman-basicmethods 36 or later.

 -- Max Vozeler <xam@debian.org>  Mon, 03 Dec 2007 00:19:49 +0100

partman-crypto (23) unstable; urgency=low

  [ Colin Watson ]
  * Reduce noise from repeated 'debian/rules clean' runs.

  [ Max Vozeler ]
  * Correct dependencies in base64/Makefile; Thanks to 
    Robert Millan for report + patch. Closes: #452830
  * Drop use of the obsolete /dev/loop/ directory
  * Make erase cancellable. Closes: #381898, #400034

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * Italian (it.po) by Stefano Canepa
  * Korean (ko.po) by Sunjae Park
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovak (sk.po) by Ivan Masár

 -- Max Vozeler <xam@debian.org>  Sun, 25 Nov 2007 17:01:43 +0100

partman-crypto (22) unstable; urgency=low

  [ Frans Pop ]
  * For hd-media installs the module loop will already be loaded, which
    prevents loop-aes from being loaded. Attempt to replace loop with loop-aes
    by unmounting the CD image, replacing the module and remounting the image.
    As losetup is not available, we cannot check what exactly is loop-mounted,
    so we just assume that loop is only used for a CD image.
    Many thanks to Nemui Ailin for identifying the issue. Closes: #434027.

  [ Colin Watson ]
  * Use 'mkdir -p' rather than more awkward test-then-create constructions.

 -- Max Vozeler <xam@debian.org>  Sun, 12 Aug 2007 20:31:48 +0200

partman-crypto (21) unstable; urgency=low

  [ Frans Pop ]
  * Move "Use as" option together with raid and lvm. Closes: #414411.
  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.

  [ Colin Watson ]